--- a/css/style.css
+++ b/css/style.css
@@ -365,24 +365,22 @@ body {
 		}
 			div#jgc-content-features {
 				width: 100%;
-				height: 100px;
-				position: relative;
+				height: 100%;
+                                float: left;
 				top: -1px;
 				background-color: #dadada;
-				margin-bottom: 100px;
+				margin-bottom: 5px;
 			}
 			
 				div.jgc-content-feature-item-left {
 					float: left;
                                         margin-left: 5px;
                                         margin-top: 5px;
-                                        position: relative;
 				}
 				div.jgc-content-feature-item-right {
 					float: right;
                                         margin-right: 5px;
                                         margin-top: 5px;
-                                        position: relative;
 				}
 		
 			div#carousel {
