--- a/css/style.css
+++ b/css/style.css
@@ -374,13 +374,38 @@ body {
 			
 				div.jgc-content-feature-item-left {
 					float: left;
-                                        margin-left: 5px;
-                                        margin-top: 5px;
+                                        margin-left: 25px;
+                                        margin-top: 25px;
+                                        margin-right: 15px;
+                                        margin-bottom: 25px;
 				}
 				div.jgc-content-feature-item-right {
 					float: right;
                                         margin-right: 5px;
                                         margin-top: 5px;
+				}
+				h1.content-text-header {
+					color: #990000;	
+				}
+				h2.content-text-header {
+					color: #990000;	
+				}
+				h3.content-text-header {
+					color: #990000;	
+				}
+				span.content-underline {
+					text-decoration: underline;
+				}
+				span.content-bold {
+					font-weight: bold;
+				}
+				span.content-italic {
+					font-style: italic;
+				}
+				a.link-underlined {
+				}
+				a.link-no-underline {
+					text-decoration: none;
 				}
 		
 			div#carousel {
