--- a/css/superfish.css
+++ b/css/superfish.css
@@ -12,7 +12,7 @@
 	list-style:		none;
 }
 .sf-menu {
-	line-height:	1.0;
+	line-height:	1.20;
 }
 .sf-menu ul {
 	position:		absolute;
@@ -36,7 +36,7 @@
 .sf-menu li:hover ul,
 .sf-menu li.sfHover ul {
 	left:			0;
-	top:			2.5em; /* match top ul list item height */
+	top:			3.4em; /* match top ul list item height */
 	z-index:		99;
 }
 ul.sf-menu li:hover li ul,
@@ -71,7 +71,7 @@ ul.sf-menu li li li.sfHover ul {
 }
 .sf-menu a, .sf-menu a:visited  { /* visited pseudo selector so IE6 applies text colour*/
 	color:			#ffffff; /* #13a; JBB */
-        font-size:              100%;
+        font-size:              120%;
 }
 .sf-menu li {
 	background:		#990000; /*#BDD2FF; JBB*/
@@ -108,7 +108,7 @@ ul.sf-menu li li li.sfHover ul {
 	background:		url('../images/arrows-ffffff.png') no-repeat -10px -100px; /* 8-bit indexed alpha png. IE6 gets solid image only */
 }
 a > .sf-sub-indicator {  /* give all except IE6 the correct values */
-	top:			.8em;
+	top:			1.0em;
 	background-position: 0 -100px; /* use translucent arrow for modern browsers*/
 }
 /* apply hovers to modern browsers */
