--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,9 @@ body {
 				hr.short-rule {
 					width: 80%;
 				}
-				/*Columns*/
+				/*Columns:*/
+
+				/*2 even columns */
 				div.column-outer {
 					width: 910px;
 				}
@@ -437,6 +439,18 @@ body {
 					float: left;
 					margin-left: 10px;
 				}
+				/*2/3, 1/3 columns */
+				div.column-inner-box-two-thirds {
+					width: 600px;
+					float: left;
+				}
+				div.column-inner-box-one-third {
+					width: 300px;
+					float: left;
+					margin-left: 10px;
+				}
+
+
 				/* end columns */
 		
 			div#carousel {
