new home graphic

--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ body {
 				}
 				
 				div#slide_1 {
-					background-image: url('../images/index/mural_home.jpg');
+					background-image: url('../images/index/homeDec2012.png');
 				}
 				
 					div.slide_quote {
