Added minimize size for content area, fixed the width of the aside box, added simple editing of html in brower

--- a/css/superfish.css
+++ b/css/superfish.css
@@ -32,6 +32,7 @@
 .sf-menu a {
 	display:		block;
 	position:		relative;
+  /*font-family: NewsGothic;*/
 }
 .sf-menu li:hover ul,
 .sf-menu li.sfHover ul {
