--- a/css/style.css
+++ b/css/style.css
@@ -215,15 +215,6 @@ button {  width: auto; overflow: visible; }
 /* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
 .clearfix { zoom: 1; }
 
-
-
-
-
-
- /* Primary Styles
-    Author: Rob Ryan (Hackathon, 2011)
- */
-
 @font-face {
     font-family: 'NewsGothic';
     src: url('../fonts/newsgot-webfont.eot?') format('eot'),
@@ -232,7 +223,6 @@ button {  width: auto; overflow: visible; }
          url('../fonts/newsgot-webfont.svg#webfont1Ou0dJp0') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -243,7 +233,6 @@ button {  width: auto; overflow: visible; }
          url('../fonts/news_gothic_mt_bold-webfont.svg#webfontw2sLBejI') format('svg');
     font-weight: bold;
     font-style: normal;
-
 }
 
 @font-face {
@@ -254,13 +243,13 @@ button {  width: auto; overflow: visible; }
          url('../fonts/news_gothic_mt_italic-webfont.svg#webfontYiDDOKVq') format('svg');
     font-weight: normal;
     font-style: italic;
-
 }
 
 body {
 	background-color: #333333;
-	background-image: url('../images/index/bg.png');
-	font-family: 'NewsGothic', NewsGothic, 'NewsGothicMT', Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	/*background-image: url('../images/index/bg.png');*/
+	/*font-family: 'NewsGothic', NewsGothic, 'NewsGothicMT', Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: 'NewsGothic';
 }
 
 	div#container {
@@ -272,8 +261,8 @@ body {
 			background-image: url('../images/index/headerBGSand.png');
 			background-repeat: repeat-x;
 			height: 85px;
-                        width: 960px;
-                        margin: 0 auto;
+      width: 960px;
+      margin: 0 auto;
 			/*position: relative;
 			z-index: 2;*/
 		}
@@ -361,12 +350,13 @@ body {
 			height: 100%;
 			margin: 0 auto;
 			position: relative;
-                        top: -15px;
+      top: -15px;
+      /*font-family: NewsGothic;*/
 		}
 			div#jgc-content-features {
 				width: 100%;
 				height: 100%;
-                                float: left;
+        float: left;
 				top: -1px;
 				background-color: #dadada;
 				margin-bottom: 5px;
@@ -374,17 +364,18 @@ body {
 			
 				div.jgc-content-feature-item-left {
 					float: left;
-                                        margin-left: 25px;
-                                        margin-top: 25px;
-                                        margin-right: 15px;
-                                        margin-bottom: 25px;
+          min-height: 500px;
+          margin-left: 25px;
+          margin-top: 25px;
+          margin-right: 15px;
+          margin-bottom: 25px;
 				}
 				div.jgc-content-feature-item-right {
 					float: right;
-                                        margin-right: 5px;
-                                        margin-top: 5px;
-                                        margin-top: 25px;
-                                        margin-bottom: 25px;
+          margin-right: 5px;
+          margin-top: 5px;
+          margin-top: 25px;
+          margin-bottom: 25px;
 				}
 				h1.content-text-header {
 					color: #990000;	
@@ -454,14 +445,15 @@ body {
 					margin-left: 10px;
 				}
 				div.right-side-box {
-					float: 		right;
-					margin: 	10px 10px 10px 15px;
-					padding: 	5px 5px 5px 5px;
-					background:  	#ddcf99;
+					float: right;
+          width: 250px;
+					margin:	10px 10px 10px 15px;
+					padding: 5px 5px 5px 5px;
+					background:	#ddcf99;
 					border-style:	solid;
-					border-color: 	black;
+					border-color: black;
 					border-width:	2px;
-					border-radius:	5px;
+					border-radius:5px;
 				}
 
 
