resampled home page graphic for faster load time

--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ body {
 				}
 				
 				div#slide_1 {
-					background-image: url('../images/index/homeDec2012.png');
+					background-image: url('../images/index/homeDec2012.jpg');
 				}
 				
 					div.slide_quote {
