--- a/css/style.css
+++ b/css/style.css
@@ -278,11 +278,11 @@ body {
 
 				div.nav_search {
 					width: 225px;
-                                        /*position: absolute;*/
-                                        float: right;
-                                        padding-left: 15px;
-                                        padding-top: 25px;
-                                        padding-right: 15px;
+          /*position: absolute;*/
+          float: right;
+          padding-left: 15px;
+          padding-top: 25px;
+          padding-right: 15px;
 				}
 				
 				div.nav_item{
@@ -331,11 +331,13 @@ body {
                         left: 121px;
 			margin: 0 auto;*/
 		}
-                span#donate-button {
-                  float: right;
-                  margin-top: 4px;
-                  margin-right: 10px;
-                }
+
+    span#donate-button {
+      float: right;
+      margin-top: 4px;
+      margin-right: 10px;
+    }
+
 		div#main {
 			background: white;
 			width: 960px;
@@ -421,7 +423,7 @@ body {
 				}
 				hr.short-thick-rule {
 					width: 80%;
-                                        border-width: 10px;
+          border-width: 10px;
 				}
 				/*Columns:*/
 
@@ -575,33 +577,33 @@ body {
 						span#research {
 							background-image: url('../images/icons/document-attribute-f.png');
 							background-repeat: no-repeat;
-							background-position: 40% left;
+							background-position: left 40%;
 							padding-left: 24px;
 						}
 						
 						span#highlight {
 							background-image: url('../images/icons/star.png');
 							background-repeat: no-repeat;
-							background-position: 40% left;
+							background-position: left 40%;
 							padding-left: 24px;
 						}
 
 						span#blog {
-							background-image: url('../images/icons/quill.png');
+							background-image: url('../images/icons/newspaper.png');
 							background-repeat: no-repeat;
-							background-position: 40% left;
+							background-position: left 40%;
 							padding-left: 24px;
 						}
 						
 						span#get_involved {
-							background-image: url('../images/icons/hand.png');
+							background-image: url('../images/icons/wrench.png');
 							background-repeat: no-repeat;
-							background-position: 40% left;
+							background-position: left 40%;
 							padding-left: 24px;
 						}
-                                                a#get_involved {
-                                                  text-decoration: none;
-                                                }
+            a#get_involved {
+              text-decoration: none;
+            }
 						
 					div.feature_text {
 						padding: 0px 20px 0px 20px;
@@ -609,7 +611,7 @@ body {
 					}
 					
 						div.feature_text p{
-							font-size: 16px;
+							/*font-size: 16px;*/
 							text-shadow: 0px 1px white;
 							padding: 5px 0px 10px 0px;
 						}
@@ -619,7 +621,11 @@ body {
 						}
 						
 						ul.data {
-							list-style-image: url('../images/icons/document-table.png');
+							list-style-image: url('../images/icons/hammer.png');
+						}
+
+						ul.news {
+							list-style-image: url('../images/icons/ticket-stub.png');
 						}
 						
 						div#jfk_quote {
