--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,9 @@ body {
                                   margin-right: 10px;
                                   vertical-align: text-top;
                                 }
+                                img.pin {
+                                  width: 14px;
+                                }
                                 li.bottom-gap {
                                   margin-bottom: 15px;
                                 }
