pushing some Angela changes plus my addition of mural page

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,12 @@ body {
                                   margin-right: 10px;
                                   vertical-align: text-top;
                                 }
+                                img.mid-article-big-pic {
+                                  width: 500px;
+                                  float: right;
+                                  margin-right: 10px;
+                                  vertical-align: text-top;
+                                }
                                 img.pin {
                                   width: 14px;
                                 }
