--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,9 @@ body {
 					width: 80%;
                                         border-width: 10px;
 				}
+                                img.big-top {
+                                  width: 800px;
+                                }
                                 img.news-medium {
                                   width: 500px;
                                   height: 375px;
