--- a/css/style.css
+++ b/css/style.css
@@ -542,8 +542,8 @@ height: 82px;
 				}
 				
 				div#slide_1 {
-					/*background-image: url('../images/index/homeJan20122.jpg');*/
-					background-image: url('../images/index/homeDec2012.png');
+					background-image: url('../images/index/homeJan20122.jpg');
+					/*background-image: url('../images/index/homeDec2012.png');*/
 				}
 				
 					div.slide_quote {
