--- a/css/style.css
+++ b/css/style.css
@@ -328,8 +328,8 @@ p.byline {
 			div#navbar {
 				width: 960px;
 				margin: 0 auto;
-			background-image: url('../images/stanfordlogo.gif');
-height: 82px;
+		        	/*background-image: url('../images/stanfordlogo.gif');*/
+                                height: 82px;
 			}
 			
 				#navbar img {
