--- a/css/style.css
+++ b/css/style.css
@@ -585,6 +585,22 @@ p.byline {
 					border-width:	2px;
 					border-radius:5px;
 				}
+				div.right-side-with-video {
+					float: right;
+                                        width: 250px;
+					margin:	10px 10px 10px 15px;
+					padding: 5px 5px 5px 5px;
+				}
+				div.right-side-box-under-video {
+					float: right;
+                                        width: 250px;
+					padding: 5px 5px 5px 5px;
+					background:	#ddcf99;
+					border-style:	solid;
+					border-color: black;
+					border-width:	2px;
+					border-radius:5px;
+				}
 				div.left-side-box {
 					float: left;
                                         width: 250px;
