--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,11 @@ p.byline {
 					color: #990000;
 					font-size: large;	
 				}
+				h1.title-page-header-big-left {
+					color: #990000;
+					font-size: large;
+                                        float: left;	
+				}
 				h1.title-page-header-bigger {
 					color: #990000;
 					font-size: x-large;	
@@ -589,11 +594,9 @@ p.byline {
 					float: right;
                                         width: 250px;
 					margin:	10px 10px 10px 15px;
-					padding: 5px 5px 5px 5px;
 				}
 				div.right-side-box-under-video {
 					float: right;
-                                        width: 250px;
 					padding: 5px 5px 5px 5px;
 					background:	#ddcf99;
 					border-style:	solid;
