additional css files added

--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -1,4 +1,4 @@
-#u7574-3
+#u9335-3
 {
 	border-width: 1px;
 	border-style: solid;
@@ -7,657 +7,615 @@
 	position: relative;
 }
 
-#u2433
+#u9336
 {
 	border-color: #000000;
 	background-color: #333333;
 	position: relative;
 }
 
-#u7998
+#u9466
 {
 	background-color: transparent;
 	position: relative;
 }
 
-#u8000-4
+#u9469-4
 {
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	text-align: left;
 	font-size: 9px;
+	text-align: left;
 	color: #FFFFFF;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u7998:hover #u8000-4 p
+#u9466:hover #u9469-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
 }
 
-#u8008-4
+#u9347-4
 {
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	text-align: left;
 	font-size: 9px;
+	text-align: left;
 	color: #FFFFFF;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8005:hover #u8008-4 p
+#u9346:hover #u9347-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
 }
 
-#u8007
-{
-	position: relative;
-	background: transparent url("../images/arrowmenudown.gif") no-repeat center center;
-}
-
-#u8040
+#u9362
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8040:hover
+#u9362:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8042-4
+#u9363-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8040:hover #u8042-4 p
+#u9362:hover #u9363-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8049
+#u9353
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8040.MuseMenuActive,#u8049:hover
+#u9362.MuseMenuActive,#u9353:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8050-4
+#u9354-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8040.MuseMenuActive #u8042-4 p,#u8049:hover #u8050-4 p
+#u9362.MuseMenuActive #u9363-4 p,#u9353:hover #u9354-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8054
+#u9381
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8049.MuseMenuActive,#u8054:hover
+#u9353.MuseMenuActive,#u9381:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8055-4
+#u9384-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8049.MuseMenuActive #u8050-4 p,#u8054:hover #u8055-4 p
+#u9353.MuseMenuActive #u9354-4 p,#u9381:hover #u9384-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8063
+#u9374
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8054.MuseMenuActive,#u8063:hover
+#u9381.MuseMenuActive,#u9374:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8065-4
+#u9375-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8054.MuseMenuActive #u8055-4 p,#u8063:hover #u8065-4 p
+#u9381.MuseMenuActive #u9384-4 p,#u9374:hover #u9375-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8070
+#u9367
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8063.MuseMenuActive,#u8070:hover
+#u9374.MuseMenuActive,#u9367:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8072-4
+#u9370-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8063.MuseMenuActive #u8065-4 p,#u8070:hover #u8072-4 p
+#u9374.MuseMenuActive #u9375-4 p,#u9367:hover #u9370-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8077
+#u9388
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8070.MuseMenuActive,#u8077:hover
+#u9367.MuseMenuActive,#u9388:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8080-4
+#u9390-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8070.MuseMenuActive #u8072-4 p,#u8077:hover #u8080-4 p
+#u9367.MuseMenuActive #u9370-4 p,#u9388:hover #u9390-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8015-4
+#u9462-4
 {
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	text-align: left;
 	font-size: 9px;
+	text-align: left;
 	color: #FFFFFF;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8014:hover #u8015-4 p
+#u9461:hover #u9462-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
 }
 
-#u8016
-{
-	position: relative;
-	background: transparent url("../images/arrowmenudown.gif") no-repeat center center;
-}
-
-#u8082
+#u9413
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8077.MuseMenuActive,#u8082:hover
+#u9388.MuseMenuActive,#u9413:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8084-4
+#u9415-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8077.MuseMenuActive #u8080-4 p,#u8082:hover #u8084-4 p
+#u9388.MuseMenuActive #u9390-4 p,#u9413:hover #u9415-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8085
-{
-	position: relative;
-	background: transparent url("../images/arrowmenuright.gif") no-repeat center center;
-}
-
-#u8005.MuseMenuActive #u8007,#u8014.MuseMenuActive #u8016,#u8082:hover #u8085
-{
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-#u8089
+#u9422
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8082.MuseMenuActive,#u8089:hover
+#u9413.MuseMenuActive,#u9422:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8091-4
+#u9425-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8082.MuseMenuActive #u8084-4 p,#u8089:hover #u8091-4 p
+#u9413.MuseMenuActive #u9415-4 p,#u9422:hover #u9425-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8096
+#u9429
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8089.MuseMenuActive,#u8096:hover
+#u9422.MuseMenuActive,#u9429:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8099-4
+#u9431-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8089.MuseMenuActive #u8091-4 p,#u8096:hover #u8099-4 p
+#u9422.MuseMenuActive #u9425-4 p,#u9429:hover #u9431-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8110
+#u9455
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8096.MuseMenuActive,#u8110:hover
+#u9429.MuseMenuActive,#u9455:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8112-6
+#u9456-6
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8096.MuseMenuActive #u8099-4 p,#u8110:hover #u8112-6 p
+#u9429.MuseMenuActive #u9431-4 p,#u9455:hover #u9456-6 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8138
+#u9450
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8110.MuseMenuActive,#u8138:hover
+#u9455.MuseMenuActive,#u9450:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8140-4
+#u9451-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8110.MuseMenuActive #u8112-6 p,#u8138:hover #u8140-4 p
+#u9455.MuseMenuActive #u9456-6 p,#u9450:hover #u9451-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8141
-{
-	position: relative;
-	background: transparent url("../images/arrowmenuright.gif") no-repeat center center;
-}
-
-#u8082.MuseMenuActive #u8085,#u8138:hover #u8141
-{
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-#u8145
+#u9437
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8138.MuseMenuActive,#u8145:hover
+#u9450.MuseMenuActive,#u9437:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8147-4
+#u9440-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8138.MuseMenuActive #u8140-4 p,#u8145:hover #u8147-4 p
+#u9450.MuseMenuActive #u9451-4 p,#u9437:hover #u9440-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8152
+#u9446
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8145.MuseMenuActive,#u8152:hover
+#u9437.MuseMenuActive,#u9446:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8155-4
+#u9449-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8145.MuseMenuActive #u8147-4 p,#u8152:hover #u8155-4 p
+#u9437.MuseMenuActive #u9440-4 p,#u9446:hover #u9449-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8022-4
+#u9481-4
 {
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	text-align: left;
 	font-size: 9px;
+	text-align: left;
 	color: #FFFFFF;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8019:hover #u8022-4 p
+#u9480:hover #u9481-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
 }
 
-#u8020
+#u9351,#u9411,#u9418,#u9435,#u9485
 {
+	background-color: #FFFFFF;
 	position: relative;
-	background: transparent url("../images/arrowmenudown.gif") no-repeat center center;
 }
 
-#u8138.MuseMenuActive #u8141,#u8019.MuseMenuActive #u8020
-{
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-#u8159
+#u9501
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8152.MuseMenuActive,#u8159:hover
+#u9446.MuseMenuActive,#u9501:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8161-4
+#u9502-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8152.MuseMenuActive #u8155-4 p,#u8159:hover #u8161-4 p
+#u9446.MuseMenuActive #u9449-4 p,#u9501:hover #u9502-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8166
+#u9489
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8159.MuseMenuActive,#u8166:hover
+#u9501.MuseMenuActive,#u9489:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8168-4
+#u9490-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8159.MuseMenuActive #u8161-4 p,#u8166:hover #u8168-4 p
+#u9501.MuseMenuActive #u9502-4 p,#u9489:hover #u9490-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8173
+#u9510
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8166.MuseMenuActive,#u8173:hover
+#u9489.MuseMenuActive,#u9510:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8174-4
+#u9513-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8166.MuseMenuActive #u8168-4 p,#u8173:hover #u8174-4 p
+#u9489.MuseMenuActive #u9490-4 p,#u9510:hover #u9513-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8180
+#u9496
 {
 	border-color: #777777;
-	background-color: #FFFFFF;
+	background-color: transparent;
 	position: relative;
 }
 
-#u8173.MuseMenuActive,#u8180:hover
+#u9510.MuseMenuActive,#u9496:hover
 {
 	background-color: #FFFFFF;
 }
 
-#u8180.MuseMenuActive
+#u9496.MuseMenuActive
 {
 	background-color: #FFFFFF;
 }
 
-#u8181-4
+#u9497-4
 {
 	background-color: transparent;
-	text-align: left;
 	font-size: 11px;
+	text-align: left;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8173.MuseMenuActive #u8174-4 p,#u8180:hover #u8181-4 p
+#u9510.MuseMenuActive #u9513-4 p,#u9496:hover #u9497-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8180.MuseMenuActive #u8181-4 p
+#u9496.MuseMenuActive #u9497-4 p
 {
 	color: #A4001D;
 	visibility: inherit;
 }
 
-#u8028-4
+#u9476-4
 {
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	text-align: left;
 	font-size: 9px;
+	text-align: left;
 	color: #FFFFFF;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u8026:hover #u8028-4 p
+#u9473:hover #u9476-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
 }
 
-#u8202,#u8220,#menuu7013,#u7997,#u8004,#u8005,#u8010,#u8039,#u8046,#u8053,#u8060,#u8067,#u8074,#u8011,#u8014,#u8013,#u8081,#u8087,#u8088,#u8095,#u8109,#u8137,#u8143,#u8144,#u8151,#u8018,#u8019,#u8024,#u8158,#u8165,#u8172,#u8179,#u8025,#u8026,#u8032,#u8035
+#menuu9337,#u9465,#u9345,#u9346,#u9359,#u9352,#u9380,#u9373,#u9366,#u9387,#u9409,#u9461,#u9412,#u9419,#u9426,#u9454,#u9433,#u9436,#u9443,#u9479,#u9480,#u9500,#u9486,#u9507,#u9493,#u9472,#u9473,#u9338,#u9339
 {
 	position: relative;
 }
 
-#u8036-4
+#u9342-4
 {
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	text-align: left;
 	font-size: 9px;
+	text-align: left;
 	color: #FFFFFF;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
 	position: relative;
 }
 
-#u7998.MuseMenuActive #u8000-4,#u8005.MuseMenuActive #u8008-4,#u8014.MuseMenuActive #u8015-4,#u8019.MuseMenuActive #u8022-4,#u8026.MuseMenuActive #u8028-4,#u8035.MuseMenuActive #u8036-4
+#u9466.MuseMenuActive #u9469-4,#u9346.MuseMenuActive #u9347-4,#u9461.MuseMenuActive #u9462-4,#u9480.MuseMenuActive #u9481-4,#u9473.MuseMenuActive #u9476-4,#u9339.MuseMenuActive #u9342-4
 {
 	border-style: none;
 	border-color: transparent;
 }
 
-#u8035:hover #u8036-4 p
+#u9339:hover #u9342-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
 }
 
-#u7998.MuseMenuActive #u8000-4 p,#u8005.MuseMenuActive #u8008-4 p,#u8014.MuseMenuActive #u8015-4 p,#u8019.MuseMenuActive #u8022-4 p,#u8026.MuseMenuActive #u8028-4 p,#u8035.MuseMenuActive #u8036-4 p
+#u9466.MuseMenuActive #u9469-4 p,#u9346.MuseMenuActive #u9347-4 p,#u9461.MuseMenuActive #u9462-4 p,#u9480.MuseMenuActive #u9481-4 p,#u9473.MuseMenuActive #u9476-4 p,#u9339.MuseMenuActive #u9342-4 p
 {
 	color: #DBD452;
 	visibility: inherit;
@@ -669,12 +627,5 @@
 .MenuItem /* unifiedNavBar */
 {
 	cursor: pointer;
-}
-
-#u8201
-{
-	border-color: #000000;
-	background-color: #FFFFFF;
-	position: relative;
 }
 
