--- a/css/site_global.css
+++ b/css/site_global.css
@@ -83,27 +83,33 @@ body
 
 a:link
 {
-	color: #666666;
-	font-style: normal;
-	font-weight: normal;
-	text-decoration: none;
+	color: #333333;
+	font-style: italic;
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 a:visited
 {
-	color: #666666;
+	color: #333333;
+	font-style: italic;
+	font-weight: bold;
 	text-decoration: underline;
 }
 
 a:hover
 {
-	color: #666666;
+	color: #CCCCCC;
+	font-style: italic;
+	font-weight: bold;
 	text-decoration: underline;
 }
 
 a:active
 {
-	color: #666666;
+	color: #333333;
+	font-style: italic;
+	font-weight: bold;
 	text-decoration: underline;
 }
 
@@ -115,7 +121,7 @@ a.nontext /* used to override default properties of 'a' tag */
 	font-weight: normal;
 }
 
-.Link-Style-for-Perspectives-Headline a:link
+.Perspectives-Headline-Link a:link
 {
 	color: #FFFFFF;
 	font-style: normal;
@@ -123,25 +129,31 @@ a.nontext /* used to override default properties of 'a' tag */
 	text-decoration: none;
 }
 
-.Link-Style-for-Perspectives-Headline a:visited
+.Perspectives-Headline-Link a:visited
 {
 	color: #FFFFFF;
-	text-decoration: underline;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
 }
 
-.Link-Style-for-Perspectives-Headline a:hover
+.Perspectives-Headline-Link a:hover
+{
+	color: #EFEABF;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Perspectives-Headline-Link a:active
 {
 	color: #FFFFFF;
-	text-decoration: underline;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
 }
 
-.Link-Style-for-Perspectives-Headline a:active
-{
-	color: #FFFFFF;
-	text-decoration: underline;
-}
-
-.EVENTS-Link-Style a:link
+.Events-Headline-Link a:link
 {
 	color: #FB5702;
 	font-style: normal;
@@ -149,19 +161,7 @@ a.nontext /* used to override default properties of 'a' tag */
 	text-decoration: none;
 }
 
-.EVENTS-Link-Style a:visited
-{
-	color: #FB5702;
-	text-decoration: underline;
-}
-
-.EVENTS-Link-Style a:hover
-{
-	color: #FB5702;
-	text-decoration: underline;
-}
-
-.Orange-Default-Link-Style a:link
+.Events-Headline-Link a:visited
 {
 	color: #FB5702;
 	font-style: normal;
@@ -169,22 +169,248 @@ a.nontext /* used to override default properties of 'a' tag */
 	text-decoration: none;
 }
 
-.EVENTS-Link-Style a:active,.Orange-Default-Link-Style a:visited
+.Events-Headline-Link a:hover
+{
+	color: #FBA375;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Events-Headline-Link a:active,.Main-Headline-Link a:link
 {
 	color: #FB5702;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Main-Headline-Link a:visited
+{
+	color: #FB5702;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Main-Headline-Link a:hover
+{
+	color: #FBA375;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Main-Headline-Link a:active
+{
+	color: #FB5702;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Perspectives-Subhead-Link a:link
+{
+	color: #333333;
+	font-style: normal;
+	text-decoration: none;
+}
+
+.Perspectives-Subhead-Link a:visited
+{
+	color: #333333;
+	font-style: normal;
+	text-decoration: none;
+}
+
+.Perspectives-Subhead-Link a:hover
+{
+	color: #EFEABF;
+	font-style: normal;
+	text-decoration: none;
+}
+
+.Perspectives-Subhead-Link a:active
+{
+	color: #333333;
+	font-style: normal;
+	text-decoration: none;
+}
+
+.Events-Subhead-Link a:link
+{
+	color: #333333;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Events-Subhead-Link a:visited
+{
+	color: #333333;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Events-Subhead-Link a:hover
+{
+	color: #CCCCCC;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Events-Subhead-Link a:active
+{
+	color: #333333;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Publications-Subhead-Link a:link
+{
+	color: #FB5702;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Publications-Subhead-Link a:visited
+{
+	color: #FB5702;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Publications-Subhead-Link a:hover
+{
+	color: #FBA375;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Publications-Headline-Link a:link
+{
+	color: #666666;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Publications-Headline-Link a:visited
+{
+	color: #666666;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.Publications-Headline-Link a:hover
+{
+	color: #CCCCCC;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.PDF-Download-Link a:link
+{
+	color: #333333;
+	font-style: italic;
+	font-weight: bold;
 	text-decoration: underline;
 }
 
-.Orange-Default-Link-Style a:hover
+.PDF-Download-Link a:visited
 {
-	color: #FB5702;
+	color: #333333;
+	font-style: italic;
+	font-weight: bold;
 	text-decoration: underline;
 }
 
-.Orange-Default-Link-Style a:active
+.PDF-Download-Link a:hover
+{
+	color: #CCCCCC;
+	font-style: italic;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.PDF-Download-Link a:active
+{
+	color: #333333;
+	font-style: italic;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.Publications-Subhead-Link a:active,.ts-community-Subhead-Link a:link
 {
 	color: #FB5702;
-	text-decoration: underline;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.ts-community-Subhead-Link a:visited
+{
+	color: #FB5702;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.ts-community-Subhead-Link a:hover
+{
+	color: #FBA375;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.ts-community-Subhead-Link a:active
+{
+	color: #FB5702;
+	font-style: normal;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.Publications-Headline-Link a:active,.ts-community-Headline-Link a:link
+{
+	color: #666666;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.ts-community-Headline-Link a:visited
+{
+	color: #666666;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.ts-community-Headline-Link a:hover
+{
+	color: #CCCCCC;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+.ts-community-Headline-Link a:active
+{
+	color: #666666;
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: none;
 }
 
 .normal_text
@@ -422,7 +648,13 @@ textarea
 	display: block;
 }
 
-.widget_invisible,.js .invi,.js .se_invi,.js .an_invi /* used to hide the widget before loaded */
+.ose_ei
+{
+	visibility: hidden;
+	z-index: 0;
+}
+
+.widget_invisible,.js .invi,.js .mse_pre_init,.js .an_invi /* used to hide the widget before loaded */
 {
 	visibility: hidden;
 }
