changes including color change

--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@
 	z-index: 0;
 	width: 288px;
 	border-color: #000000;
-	background-color: #73bce8;
+	background-color: #F8BC4F;
 	opacity: 0.9;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
 	filter: alpha(opacity=90);
